# gpt

./: .gitignore  README.md  pyproject.toml
src/gpt/config/: gpt_config.py
src/gpt/data/: char_dataset.py
src/gpt/tokenizer/: tokenizer.py
tests/data/: test_char_dataset.py
tests/tokenizer/: test_tokenizer.py
