[project]
name = "gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Sameen Shah",email = "smn.shah123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "gpt", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
mypy = "^1.17.1"
isort = "^6.0.1"
coverage = "^7.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["src/gpt"]

[tool.pytest.ini_options]
pythonpath = ["src"]